--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@hapi/boom": "^10.0.1",
     "@whiskeysockets/baileys": "^6.6.0",
+    "axios": "^1.6.7",
     "qrcode-terminal": "^0.12.0"
   }
 }
